center image to try and fix on mobile

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ button {
     padding: 50px;
     max-height: 100%;
     max-width: 100%;
-    background-position: right;
+    background-position: center;
 }
 
 /*
